--- a/index.html
+++ b/index.html
@@ -4,11 +4,30 @@
     <meta charset="iso-8859-1">
     <meta>
     <meta>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Youtube Clone</title>
   </head>
 
   <body>
+    <div id="nav_bar">
+      <i></i>
+
+      <figure id="img_container">
+        <img src="img/youtube_logo.png" alt="Youtube logo">
+      </figure>
+        <div id="search">
+          <input type="text" name="search_field" id="search_field"/>
+          <input type="submit" name="search_submit" value="search_submit"/>
+        </div>
+      <ul id="right_top">
+        <li id="upload">upload</li>
+        <li id="apps">apps</li>
+        <li id="messages">messages</li>
+        <li id="notifications">notifications</li>
+        <li id="menu">menu</li>
+      </ul>
+    </div>
+
 
   </body>
 </html>
