Navbar modification and add video

--- a/index.html
+++ b/index.html
@@ -15,10 +15,8 @@
       <figure id="img_container">
         <img src="img/youtube_logo.png" alt="Youtube logo">
       </figure>
-        <div id="search">
-          <input type="text" name="search_field" id="search_field"/>
-          <input type="submit" name="search_submit" value="search_submit"/>
-        </div>
+          <input type="text" placeholder="Search" name="search_field" id="search_field"/>
+          <input type="submit" name="search_submit"/>
       <ul id="right_top">
         <li id="upload">upload</li>
         <li id="apps">apps</li>
@@ -28,6 +26,14 @@
       </ul>
     </div>
 
+    <section id="video_section">
+      <h1 id="video_title">This is the title of the video</h1>
+      <iframe id="video" width="660" height="415" src="https://www.youtube.com/embed/JyECrGp-Sw8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
+    </section>
+
+    <section id="comment_section">
+
+    </section>
   </body>
 </html>
