--- a/index.html
+++ b/index.html
@@ -12,28 +12,28 @@
     <div id="nav_bar">
       <i></i>
 
-      <figure id="img_container">
-        <img src="img/youtube_logo.png" alt="Youtube logo">
-      </figure>
-          <input type="text" placeholder="Search" name="search_field" id="search_field"/>
-          <input type="submit" name="search_submit"/>
       <ul id="right_top">
-        <li id="upload">upload</li>
-        <li id="apps">apps</li>
-        <li id="messages">messages</li>
-        <li id="notifications">notifications</li>
-        <li id="menu">menu</li>
+        <li>
+          <img src="img/youtube_logo.png" alt="Youtube logo">
+        </li>
+        <li><input type="text" placeholder="Search" name="search_field" id="search_field"/></li>
+        <li><input type="submit" id="search_submit"/></li>
+        <li id="upload"><a href="">upload</a></li>
+        <li id="apps"><a href="">apps</a></li>
+        <li id="messages"><a href="">messages</a></li>
+        <li id="notifications"><a href="">notifications</a></li>
+        <li id="menu"><a href="">menu</a></li>
       </ul>
+
     </div>
 
     <section id="video_section">
-      <h1 id="video_title">This is the title of the video</h1>
+      <h1 id="video_title"><a href="">This is the title of the video</h1>
       <iframe id="video" width="660" height="415" src="https://www.youtube.com/embed/JyECrGp-Sw8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 
     </section>
 
     <section id="comment_section">
-
     </section>
   </body>
 </html>
