Heading and CSS fix

--- a/index.html
+++ b/index.html
@@ -28,9 +28,8 @@
     </div>
 
     <section id="video_section">
-      <h1 id="video_title"><a href="">This is the title of the video</h1>
       <iframe id="video" width="660" height="415" src="https://www.youtube.com/embed/JyECrGp-Sw8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-
+      <h1 id="video_title">This is the title of the video</h1>
     </section>
 
     <section id="comment_section">
