--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   </head>
 
   <body>
+
     <div id="nav_bar">
       <i></i>
 
@@ -27,12 +28,37 @@
 
     </div>
 
+
     <section id="video_section">
       <iframe id="video" width="660" height="415" src="https://www.youtube.com/embed/JyECrGp-Sw8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <h1 id="video_title">This is the title of the video</h1>
     </section>
 
     <section id="comment_section">
+      <ul>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+        <li>Item</li>
+      </ul>
     </section>
   </body>
 </html>
