Navbar fix resize

--- a/index.html
+++ b/index.html
@@ -11,19 +11,20 @@
   <body>
 
     <div id="nav_bar">
-      <i></i>
-
-      <ul id="right_top">
-        <li>
-          <img src="img/youtube_logo.png" alt="Youtube logo">
+      <ul>
+        <li id="bars">
+          <img src="img/bars.png" alt="Bars">
         </li>
-        <li><input type="text" placeholder="Search" name="search_field" id="search_field"/></li>
+        <li>
+          <img id="youtube_logo" src="img/youtube_logo.png" alt="Youtube logo">
+        </li>
+        <li class="search_nav"><input type="text" placeholder="Search" name="search_field" id="search_field"/></li>
         <li><input type="submit" id="search_submit"/></li>
-        <li id="upload"><a href="">upload</a></li>
-        <li id="apps"><a href="">apps</a></li>
-        <li id="messages"><a href="">messages</a></li>
-        <li id="notifications"><a href="">notifications</a></li>
-        <li id="menu"><a href="">menu</a></li>
+        <li class="right_top" id="upload"><a href="">uplo</a></li>
+        <li class="right_top" id="apps"><a href="">apps</a></li>
+        <li class="right_top" id="messages"><a href="">messa</a></li>
+        <li class="right_top" id="notifications"><a href="">noti</a></li>
+        <li class="right_top" id="menu"><a href="">menu</a></li>
       </ul>
 
     </div>
@@ -35,30 +36,8 @@
     </section>
 
     <section id="comment_section">
-      <ul>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-        <li>Item</li>
-      </ul>
+      <article>
     </section>
+
   </body>
 </html>
