Trying to design search bar

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
           <img id="youtube_logo" src="img/youtube_logo.png" alt="Youtube logo">
         </li>
         <li class="search_nav"><input type="text" placeholder="Search" name="search_field" id="search_field"/></li>
-        <li><input type="submit" id="search_submit"/></li>
+        <li id="search_submit_nav"><input type="submit" id="search_submit"/></li>
         <li class="right_top" id="upload"><a href="">uplo</a></li>
         <li class="right_top" id="apps"><a href="">apps</a></li>
         <li class="right_top" id="messages"><a href="">messa</a></li>
