--- a/index.html
+++ b/index.html
@@ -26,17 +26,48 @@
         <li class="right_top" id="notifications"><a href="">noti</a></li>
         <li class="right_top" id="menu"><a href="">menu</a></li>
       </ul>
+    </div>
+
+    <div class="conteiner">
+      <div class="video_player_section"> <!-- Video player section -->
+        <div id="video_player">
+          <iframe width="650" height="365.625" src="https://www.youtube.com/embed/osSJhXruEzU" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    			<h1>Title</h1>
+    			<div class="">
+    				<input type="text" placeholder="Enter your comment...">
+    				<br></br>
+    			</div>
+    			<div class="comment">
+    				<article>
+    					<img src="youtube_logo.png" alt="Not found" width="30" height="21.5px">
+    					<h3>Comments: </h3>
+    					<p>This is a the first comment</p>
+    				</article>
+    			</div>
+    		</div>
+      </div>
+
+      <div id="recommended">
+        <img src="youtube_logo.png" alt="image not found">
+      </div>
 
     </div>
 
-
-    <section id="video_section">
+    <!-- <section id="video_section">
       <iframe id="video" width="660" height="415" src="https://www.youtube.com/embed/JyECrGp-Sw8?controls=0" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       <h1 id="video_title">This is the title of the video</h1>
-    </section>
+      <h3>Descripction:</h3>
+      <article>
+        Description of the video
+      </article>
+      <article>
+        <img src="#" alt="Not found">
+        <h3>Comment: </h3>
+        <p>This is the first comment</p>
+      </article>
+    </section> -->
 
     <section id="comment_section">
-      <article>
     </section>
 
   </body>
